tests/ui/higher-ranked/trait-bounds/hrtb-conflate-regions.stderr
error: implementation of `Foo` is not general enough
  --> $DIR/hrtb-conflate-regions.rs:27:10
   |
LL | fn b() { want_foo2::<SomeStruct>(); }
   |          ^^^^^^^^^^^^^^^^^^^^^^^^^ implementation of `Foo` is not general enough
   |
   = note: `SomeStruct` must implement `Foo<(&'0 isize, &'1 isize)>`, for any two lifetimes `'0` and `'1`...
   = note: ...but it actually implements `Foo<(&'2 isize, &'2 isize)>`, for some specific lifetime `'2`

error: implementation of `Foo` is not general enough
  --> $DIR/hrtb-conflate-regions.rs:27:10
   |
LL | fn b() { want_foo2::<SomeStruct>(); }
   |          ^^^^^^^^^^^^^^^^^^^^^^^^^ implementation of `Foo` is not general enough
   |
   = note: `SomeStruct` must implement `Foo<(&'0 isize, &'1 isize)>`, for any two lifetimes `'0` and `'1`...
   = note: ...but it actually implements `Foo<(&'2 isize, &'2 isize)>`, for some specific lifetime `'2`
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: aborting due to 2 previous errors

